<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/bet" />

            <TextView
                android:id="@+id/bet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/minus"
                android:layout_width="72dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@drawable/minus"
                android:contentDescription="@string/minus_button"
                android:padding="16dp" />

            <ImageButton
                android:id="@+id/plus"
                android:layout_width="72dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@drawable/plus"
                android:contentDescription="@string/plus_button"
                android:padding="16dp" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/spin"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:background="@drawable/spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/spin_button"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="72dp"
        android:layout_height="52dp"
        android:contentDescription="@string/settings"
        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
